ms-test/deploymentConfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: ms-test
  namespace: namespace-backend # Simona - Update the namespace post cluster creation.
  labels:
    application: ms-test
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    deploymentConfig: ms-test
  template:
    metadata:
      name: ms-test
      creationTimestamp: null
      labels:
        application: ms-test
        deploymentConfig: ms-test
    spec:
      containers:
        - resources:
            limits:
              cpu: '1'
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 8
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 8
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: ms-test
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: >-
            ghcr.io/teamdigitale/dati-semantic-frontend:latest
      restartPolicy: Always
      terminationGracePeriodSeconds: 75
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
