ms-test/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ms-test
  namespace: ndc-dev
  labels:
    application: ms-test
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  selector:
    deploymentConfig: ms-test
  type: ClusterIP
  sessionAffinity: None
