ms-test/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ms-test
  namespace: ndc-test
  labels:
    application: ms-test
spec:
  to:
    kind: Service
    name: ms-test
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
